--- a/pom.xml
+++ b/pom.xml
@@ -91,7 +91,7 @@
 	
 	<dependency>
 		<groupId>org.nd4j</groupId>
-		<artifactId>nd4j-cuda-10.2</artifactId>
+		<artifactId>nd4j-cuda-10.2</artifactId><!-- nd4j-native -->
 		<version>1.0.0-beta7</version>
 	</dependency>
   
