--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 
 <dependencies>
 
-<!-- https://mvnrepository.com/artifact/org.springframework/spring-core -->
+	<!-- https://mvnrepository.com/artifact/org.springframework/spring-core -->
 	<dependency>
 	    <groupId>org.springframework</groupId>
 	    <artifactId>spring-core</artifactId>
@@ -96,6 +96,11 @@
 		<version>1.0.0-beta7</version>
 	</dependency>
 
+	<dependency>
+		<groupId>org.deeplearning4j</groupId>
+		<artifactId>dl4j-spark_2.11</artifactId>
+		<version>1.0.0-beta7</version>
+	</dependency>
   
 </dependencies>
   
